[package]
name = "ethread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
egui = "0.26.0"
poll-promise = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
tokio = { version = "1.35", features = ["rt", "rt-multi-thread"] }
# unix
[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2.153"

# windows
[target.'cfg(target_family = "windows")'.dependencies]
kernel32-sys = "0.2.2"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
